Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Details__c/Laptop_Details__c.object-meta.xml
<CustomObject>
    <label>Laptop Stock</label>
    <nameField>
        <label>Laptop Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laptop Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>