Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Details__c/fields/Allocated_To__c.field-meta.xml
<CustomField>
    <fullName>Allocated_To__c</fullName>
    <label>Allocated To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>