Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Details__c/fields/Inches__c.field-meta.xml
<CustomField>
    <fullName>Inches__c</fullName>
    <label>Inches</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>