Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Details__c/fields/Laptop_Status__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Status__c</fullName>
    <label>Laptop Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Blocked for Allocation</fullName>
            </value>
            <value>
                <fullName>Requested for Collection</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Requested for Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>