Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Details__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <displayFormat>PO#{00000000}</displayFormat>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>