Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Details__c/listViews/All_Columns.listView-meta.xml
<ListView>
    <fullName>All_Columns</fullName>
    <columns>Serial_Number__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Inches__c</columns>
    <columns>Laptop_Status__c</columns>
    <columns>Allocated_To__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Mine</filterScope>
    <label>All Columns</label>
</ListView>