Gitsalesforce/LaptopManagementProject/force-app/main/default/objects/Laptop_Details__c/listViews/IT_Service_Team_Laptop_Details.listView-meta.xml
<ListView>
    <fullName>IT_Service_Team_Laptop_Details</fullName>
    <filterScope>Queue</filterScope>
    <label>IT Service Team</label>
    <queue>IT_Service_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>